syntax = "proto3";
package IM.Login; //生成.h文件后变为IM::Login namespace

//定义服务
service ImLogin {
    //定义服务函数
    rpc Regist (IMRegisterReq) returns (IMRegisterRes) {}
    rpc Login (IMLoginReq) returns (IMLoginRes) {}
}

//注册账号,根据这个生成一个C++类，并自动提供一些修改和获取成员的方法
message IMRegisterReq {
    string user_name = 1;
    string password = 2;
}

message IMRegisterRes {
    string user_name = 1;
    uint32 user_id = 2;
    uint32 result_code = 3;
}

message IMLoginReq {
    string user_name = 1;
    string password = 2;
}

message IMLoginRes {
    uint32 user_id = 1;
    uint32 result_code = 2;
}
